# resume_tailor_agent

./: README.md  agent.py  main.py  pyproject.toml
resume_tailor_agent/: package-lock.json  package.json
resume_tailor_agent/app/: globals.css  page.tsx
